--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -13,6 +13,10 @@
   &--large{
     font-size: 1.25rem;
     padding: 1.1rem 1.9rem;
+
+    @mixin atSmall{
+      font-size: 1.25rem;
+    }
   }
 
 }
